--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: schedule_app
-description: A new Flutter project.
+description: Flutter schedule app.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.0+4
+  intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -28,7 +29,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  intl: ^0.16.1
 
 
 # For information on the generic Dart part of this file, see the
@@ -43,6 +43,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/
     - assets/images/
 
   # To add assets to your application, add an assets section, like this:
